Aethetics: fix paddings, opacities and spacing

--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -64,7 +64,7 @@ p
 
 @media (min-width: 1440px)
   p
-    font-size: 17px
+    // font-size: 17px
     // line-height: 160%
 
 h1
@@ -92,7 +92,8 @@ h3
 
 @media (min-width: 1280px)
   h3
-    font-size: 24px
+    // font-size: 24px
+    margin-bottom: 6px
 
 .layout-wrapper
   width: 100%
