--- a/styles/parts/BlogPreview.module.sass
+++ b/styles/parts/BlogPreview.module.sass
@@ -21,6 +21,7 @@
           transition: var(--transition)
         p
           margin-bottom: 14px
+          opacity: 0.8
         &:hover,
         &:focus
           h3
@@ -70,7 +71,7 @@
 @media (min-width: 1280px)
   .blogPreviewWrapper
     .blogPreview
-      padding: 0 5.7vw
+      padding: 0 5.4vw
       h1
         // max-width: 670px
         margin-bottom: 56px
