--- a/styles/parts/Header.module.sass
+++ b/styles/parts/Header.module.sass
@@ -17,7 +17,7 @@
   .header
     display: flex
     margin: auto
-    padding: 64px 5.7vw
+    padding: 60px 5.4vw
     justify-content: space-between
     &.fixed
       position: absolute
