--- a/styles/parts/NextSection.module.sass
+++ b/styles/parts/NextSection.module.sass
@@ -4,6 +4,7 @@
   margin-bottom: 34px
   max-width: 480px
   p
+    opacity: 0.8
   h1
     margin-bottom: 0
     a
@@ -22,7 +23,7 @@
     
 @media (min-width: 1280px)
   .next
-    padding: 0 5.7vw
+    padding: 0 5.4vw
     margin-top: 140px
     margin-bottom: 20px
     max-width: 680px
