--- a/styles/parts/PresentationWrapper.module.sass
+++ b/styles/parts/PresentationWrapper.module.sass
@@ -9,6 +9,7 @@
       p
         font-size: 15px
         line-height: 140%
+        opacity: 0.8
         // margin-bottom: 16px
         // margin-bottom: 20px
       h1
@@ -28,6 +29,9 @@
         height: 450px
         position: relative
         background-color: var(--color-shadow)
+        // border-radius: 8px
+        // img
+        //   border-radius: 8px
       .space
         padding: 92px 20px 67px 0
   .presentationB
@@ -38,6 +42,11 @@
       height: 450px
       position: relative
       background-color: var(--color-shadow)
+      // border-top-left-radius: 8px
+      // border-bottom-left-radius: 8px
+      // img
+      //   border-top-left-radius: 8px
+      //   border-bottom-left-radius: 8px
     .space
   &.noBottom
     margin-bottom: 0 !important
@@ -123,9 +132,10 @@
 @media (min-width: 1280px)
   .presentationWrapper
     // padding-left: 6vw
-    padding-left: 5.7vw
+    padding-left: 5.4vw
     .presentationA
       .heading
+        margin-bottom: 76px
         p
         h1
           &.postTitle
