--- a/styles/parts/WorksGrid.module.sass
+++ b/styles/parts/WorksGrid.module.sass
@@ -16,6 +16,9 @@
         position: relative
         margin-bottom: 20px
         background-color: var(--color-shadow)
+        // border-radius: 8px
+        // img
+        //   border-radius: 8px
       .data
         padding-right: 10px
         h3
@@ -25,6 +28,7 @@
         p
           max-width: 98%
           line-height: 130%
+          opacity: 0.8
       &:hover,
       &:focus
         .data
@@ -80,13 +84,13 @@
           margin-bottom: 24px
         .data
           h3
-            margin-bottom: 6px
+            // margin-bottom: 6px
           p
 
 @media (min-width: 1280px)
   .worksGridWrapper
     // padding: 0 6vw
-    padding: 0 5.7vw
+    padding: 0 5.4vw
     margin-bottom: 140px
     h1
       max-width: 704px
